force-app/main/default/objects/SPEN_Job__c/SPEN_Job__c.object-meta.xml
<CustomObject>
    <description>Custom object used to store L&amp;P Job records</description>
    <label>Job</label>
    <nameField>
        <label>Job Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>