force-app/main/default/objects/SPEN_Job__c/fields/SPEN_ActualDaysOver__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ActualDaysOver__c</fullName>
    <formula>If((SPEN_ActualLeadTime__c - SPEN_PlannedLeadTime__c)&lt;0,0,(SPEN_ActualLeadTime__c - SPEN_PlannedLeadTime__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Days Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>