force-app/main/default/objects/SPEN_Job__c/fields/SPEN_ActualLeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ActualLeadTime__c</fullName>
    <label>Actual Lead Time</label>
    <summarizedField>SPEN_Job_Milestone__c.SPEN_Actual_lead_time_Days__c</summarizedField>
    <summaryForeignKey>SPEN_Job_Milestone__c.SPEN_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>