force-app/main/default/objects/SPEN_Job__c/fields/SPEN_BusinessArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BusinessArea__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPEN_LicenseArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Land &amp; Planning</fullName>
            </value>
            <value>
                <fullName>Business Transformation</fullName>
            </value>
            <value>
                <fullName>External Customer</fullName>
            </value>
            <value>
                <fullName>Internal Customer</fullName>
            </value>
            <value>
                <fullName>Land Solutions Policy &amp; Performance</fullName>
            </value>
            <value>
                <fullName>Licence Programmes</fullName>
            </value>
            <value>
                <fullName>Processes &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Strategic Transmission Projects</fullName>
            </value>
            <value>
                <fullName>Transmission Operations</fullName>
            </value>
            <value>
                <fullName>Transmission Projects - Customer Connection</fullName>
            </value>
            <value>
                <fullName>Transmission Projects - Infrastructure</fullName>
            </value>
            <value>
                <fullName>Customer Resolution</fullName>
            </value>
            <value>
                <fullName>Customer Connections</fullName>
            </value>
            <value>
                <fullName>Distribution Network Operations</fullName>
            </value>
            <value>
                <fullName>Distribution Network Projects</fullName>
            </value>
            <value>
                <fullName>Estates</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Land Agent</fullName>
            </value>
            <value>
                <fullName>Land Solutions, Policy &amp; Performance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Tree Department</fullName>
            </value>
            <value>
                <fullName>License Programmes</fullName>
            </value>
            <value>
                <fullName>HS2</fullName>
            </value>
            <value>
                <fullName>SPM 132 Operations</fullName>
            </value>
            <value>
                <fullName>SPM 132 Projects - Infrastructure</fullName>
            </value>
            <value>
                <fullName>SPM 132 Projects - Customer Connection</fullName>
            </value>
            <value>
                <fullName>Interal Customer</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
                <isActive>false</isActive>
                <label>CRM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>