force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Cal_Creator__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Cal_Creator__c</fullName>
    <description>Created as part of ESC-39.</description>
    <formula>CreatedBy.FirstName +&quot; &quot;+ CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPEN_Cal_Creator</label>
    <type>Text</type>
</CustomField>