force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Cal_Environ__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Cal_Environ__c</fullName>
    <description>Created as part of ESC-39.</description>
    <formula>SPENEnvironmentalPlanner__r.FirstName +&quot; &quot;+ SPENEnvironmentalPlanner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPEN_Cal_Environ</label>
    <type>Text</type>
</CustomField>