force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Cal_LA__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Cal_LA__c</fullName>
    <description>Created as part of ESC-39.</description>
    <formula>SPEN_LandAssistant__r.FirstName +&quot; &quot;+ SPEN_LandAssistant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPEN_Cal_LA</label>
    <type>Text</type>
</CustomField>