force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Cancelledby__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Cancelledby__c</fullName>
    <description>Used to identify who has cancelled the job when it is terminated</description>
    <label>Cancelled by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Landowner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>