force-app/main/default/objects/SPEN_Job__c/fields/SPEN_CancelledReason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CancelledReason__c</fullName>
    <description>Used to capture the reason for cancellation of the Job</description>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Withdrawn</fullName>
            </value>
            <value>
                <fullName>Business Withdrawn</fullName>
            </value>
            <value>
                <fullName>Land Consent Issue</fullName>
            </value>
            <value>
                <fullName>Business Re-Design</fullName>
            </value>
            <value>
                <fullName>Programme Refresh</fullName>
            </value>
            <value>
                <fullName>Planning Refused</fullName>
            </value>
            <value>
                <fullName>Energy Consents refused</fullName>
            </value>
            <value>
                <fullName>Other External Stakeholder</fullName>
            </value>
            <value>
                <fullName>Raised in error</fullName>
            </value>
            <value>
                <fullName>No PO received</fullName>
            </value>
            <value>
                <fullName>Program Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>