force-app/main/default/objects/SPEN_Job__c/fields/SPEN_CertificateCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CertificateCompletionDate__c</fullName>
    <label>Certificate Completion Date</label>
    <type>Date</type>
</CustomField>