force-app/main/default/objects/SPEN_Job__c/fields/SPEN_CertificateRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CertificateRequired__c</fullName>
    <description>Created as part of ESC-103</description>
    <label>Certificate Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completion Certificate Required</fullName>
            </value>
            <value>
                <fullName>No Completion Certificate required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>