force-app/main/default/objects/SPEN_Job__c/fields/SPEN_CircuitID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CircuitID__c</fullName>
    <label>Circuit ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>