force-app/main/default/objects/SPEN_Job__c/fields/SPEN_ConnectionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConnectionDate__c</fullName>
    <label>Connection Date</label>
    <type>Date</type>
</CustomField>