force-app/main/default/objects/SPEN_Job__c/fields/SPEN_ConnectionType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConnectionType__c</fullName>
    <description>ESC-114: Used for selecting the connection type of the job</description>
    <label>Connection Type - Workflow:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LP Connection Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>