force-app/main/default/objects/SPEN_Job__c/fields/SPEN_ConsentingMilestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConsentingMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consenting Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SPEN_Job_Milestone__c.SPEN_Job__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_Job_Milestone__c</referenceTo>
    <relationshipLabel>Consenting Milestone</relationshipLabel>
    <relationshipName>JobsMilestone</relationshipName>
    <type>Lookup</type>
</CustomField>