force-app/main/default/objects/SPEN_Job__c/fields/SPEN_ControlNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ControlNumber__c</fullName>
    <label>Control Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>