force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Create_Job_in_Live__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Create_Job_in_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Job in Live ?</label>
    <type>Checkbox</type>
</CustomField>