force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Customer__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Customer__c</fullName>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>