force-app/main/default/objects/SPEN_Job__c/fields/SPEN_CustomerAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerAddress__c</fullName>
    <label>Customer Address</label>
    <type>TextArea</type>
</CustomField>