force-app/main/default/objects/SPEN_Job__c/fields/SPEN_CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerEmail__c</fullName>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>