force-app/main/default/objects/SPEN_Job__c/fields/SPEN_CustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerPhone__c</fullName>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>