force-app/main/default/objects/SPEN_Job__c/fields/SPEN_CustomerType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Customer Connection</fullName>
            </value>
            <value>
                <fullName>Land North</fullName>
            </value>
            <value>
                <fullName>Land South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>