force-app/main/default/objects/SPEN_Job__c/fields/SPEN_DeliveryEngineer__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeliveryEngineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DeliveryEngineerJobs</relationshipName>
    <type>Lookup</type>
</CustomField>