force-app/main/default/objects/SPEN_Job__c/fields/SPEN_DesignApprovedLnPConsenting__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignApprovedLnPConsenting__c</fullName>
    <description>ESC-141</description>
    <inlineHelpText>This date should correspond with issue of voluntary Land Rights date.</inlineHelpText>
    <label>Design Approved for L&amp;P Consenting</label>
    <type>Date</type>
</CustomField>