force-app/main/default/objects/SPEN_Job__c/fields/SPEN_DesignProcessStartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignProcessStartDate__c</fullName>
    <description>ESC-141</description>
    <inlineHelpText>This should correspond with the Preferred Route identified date.</inlineHelpText>
    <label>Design Process Started Date</label>
    <type>Date</type>
</CustomField>