force-app/main/default/objects/SPEN_Job__c/fields/SPEN_DesignStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignStatus__c</fullName>
    <label>Design Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Design Freeze 1</fullName>
            </value>
            <value>
                <fullName>Design Freeze 2</fullName>
            </value>
            <value>
                <fullName>Redesign</fullName>
            </value>
            <value>
                <fullName>Redesign Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>