force-app/main/default/objects/SPEN_Job__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPEN_LicenseArea__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ayrshire &amp; Clyde South</fullName>
            </value>
            <value>
                <fullName>Central &amp; Fife</fullName>
            </value>
            <value>
                <fullName>Dee Valley/ Mid Wales</fullName>
            </value>
            <value>
                <fullName>Dumfries &amp; Galloway</fullName>
            </value>
            <value>
                <fullName>Edinburgh &amp; Borders</fullName>
            </value>
            <value>
                <fullName>Glasgow &amp; Clyde North</fullName>
            </value>
            <value>
                <fullName>Lanarkshire</fullName>
            </value>
            <value>
                <fullName>Merseyside</fullName>
            </value>
            <value>
                <fullName>Mid-Cheshire</fullName>
            </value>
            <value>
                <fullName>North Wales</fullName>
            </value>
            <value>
                <fullName>Wirral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>