force-app/main/default/objects/SPEN_Job__c/fields/SPEN_ExceedingLeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExceedingLeadTime__c</fullName>
    <formula>IF( SPEN_ActualLeadTime__c &gt; SPEN_PlannedLeadTime__c , SPEN_ActualLeadTime__c-SPEN_PlannedLeadTime__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exceeding Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>