force-app/main/default/objects/SPEN_Job__c/fields/SPEN_InstructionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstructionDate__c</fullName>
    <description>ESC-114: Stores the instruction date</description>
    <label>Instruction Date</label>
    <type>Date</type>
</CustomField>