force-app/main/default/objects/SPEN_Job__c/fields/SPEN_InstructLegalTitleReportRequested__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstructLegalTitleReportRequested__c</fullName>
    <label>Instruct Legal Title Report Requested</label>
    <type>Date</type>
</CustomField>