force-app/main/default/objects/SPEN_Job__c/fields/SPEN_JobReleasedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobReleasedDate__c</fullName>
    <label>Job Released Date</label>
    <type>Date</type>
</CustomField>