force-app/main/default/objects/SPEN_Job__c/fields/SPEN_JobStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobStatus__c</fullName>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Job Released</fullName>
            </value>
            <value>
                <fullName>Full Job Released</fullName>
            </value>
            <value>
                <fullName>Job Released -Completion Certificate Required</fullName>
            </value>
            <value>
                <fullName>Job Released - Awaiting Final Land Right Invoicing</fullName>
            </value>
            <value>
                <fullName>Job Completed by LO - Completion Certificate Required</fullName>
                <isActive>false</isActive>
                <label>Job Completed by LO - Completion Certificate Required</label>
            </value>
            <value>
                <fullName>Job Completed by LO - Completion certificate Not Required</fullName>
                <isActive>false</isActive>
                <label>Job Completed by LO - Completion certificate Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>