force-app/main/default/objects/SPEN_Job__c/fields/SPEN_JobTitle__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobTitle__c</fullName>
    <label>Job Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>