force-app/main/default/objects/SPEN_Job__c/fields/SPEN_LandAssistant__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandAssistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Assistant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LandAssistantJobs</relationshipName>
    <type>Lookup</type>
</CustomField>