force-app/main/default/objects/SPEN_Job__c/fields/SPEN_LandDeliveryRequiredByDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandDeliveryRequiredByDate__c</fullName>
    <label>Land Delivery Required by Date</label>
    <type>Date</type>
</CustomField>