force-app/main/default/objects/SPEN_Job__c/fields/SPEN_LandManager__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LandManagerJobs</relationshipName>
    <type>Lookup</type>
</CustomField>