force-app/main/default/objects/SPEN_Job__c/fields/SPEN_LandOfficer__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandOfficer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LandOfficerJobs</relationshipName>
    <type>Lookup</type>
</CustomField>