force-app/main/default/objects/SPEN_Job__c/fields/SPEN_LegalTitleReportReceived__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LegalTitleReportReceived__c</fullName>
    <label>Legal Title Report Received</label>
    <type>Date</type>
</CustomField>