force-app/main/default/objects/SPEN_Job__c/fields/SPEN_LicenseArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LicenseArea__c</fullName>
    <label>Licence Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Environmental Planning</fullName>
                <isActive>false</isActive>
                <label>Environmental Planning</label>
            </value>
            <value>
                <fullName>Land Assistant North</fullName>
                <isActive>false</isActive>
                <label>Land Assistant North</label>
            </value>
            <value>
                <fullName>Land Assistant South</fullName>
                <isActive>false</isActive>
                <label>Land Assistant South</label>
            </value>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>SPM</fullName>
            </value>
            <value>
                <fullName>SPM 132</fullName>
            </value>
            <value>
                <fullName>SPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>