force-app/main/default/objects/SPEN_Job__c/fields/SPEN_LnPArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LnPArea__c</fullName>
    <label>L&amp;P Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPEN_LicenseArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transmission Land</fullName>
            </value>
            <value>
                <fullName>Land North</fullName>
            </value>
            <value>
                <fullName>Environmental Planning North</fullName>
            </value>
            <value>
                <fullName>Distribution Land North</fullName>
            </value>
            <value>
                <fullName>Distribution Land South</fullName>
            </value>
            <value>
                <fullName>Land South</fullName>
            </value>
            <value>
                <fullName>Environmental Planning South</fullName>
            </value>
            <value>
                <fullName>SPM 132 Land</fullName>
            </value>
            <value>
                <fullName>SPT Land &amp; EP North</fullName>
            </value>
            <value>
                <fullName>Distribution Land North &amp; EP North</fullName>
            </value>
            <value>
                <fullName>Land North &amp; Distribution Land North</fullName>
            </value>
            <value>
                <fullName>Distribution Land South &amp; EP South</fullName>
            </value>
            <value>
                <fullName>Land South &amp; Distribution Land South</fullName>
            </value>
            <value>
                <fullName>SPM 132 Land &amp; EP South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>