force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Location__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>