force-app/main/default/objects/SPEN_Job__c/fields/SPEN_LocationPostCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LocationPostCode__c</fullName>
    <description>Created as part of ESC-845</description>
    <label>Location Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>