force-app/main/default/objects/SPEN_Job__c/fields/SPEN_MilestoneRedesignLeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MilestoneRedesignLeadTime__c</fullName>
    <description>Created as part of ESC-458.</description>
    <label>Milestone Redesign Lead Time</label>
    <summarizedField>SPEN_Job_Milestone__c.SPEN_RedesignLeadTime__c</summarizedField>
    <summaryForeignKey>SPEN_Job_Milestone__c.SPEN_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>