force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Name__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Name__c</fullName>
    <description>Used for the Auto Numbering Logic for Job&apos;s unique identifier</description>
    <displayFormat>J-{00000}</displayFormat>
    <label>Job Number</label>
    <type>AutoNumber</type>
</CustomField>