force-app/main/default/objects/SPEN_Job__c/fields/SPEN_NotesComments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NotesComments__c</fullName>
    <label>Notes/Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>