force-app/main/default/objects/SPEN_Job__c/fields/SPEN_OSGridReference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OSGridReference__c</fullName>
    <label>OS Grid Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>