force-app/main/default/objects/SPEN_Job__c/fields/SPEN_PlannedLeadDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlannedLeadDate__c</fullName>
    <description>Created as part of esc-1275.</description>
    <label>Planned Lead Date</label>
    <type>Date</type>
</CustomField>