force-app/main/default/objects/SPEN_Job__c/fields/SPEN_PlannedLeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlannedLeadTime__c</fullName>
    <description>As part of ESC-70 and ESC-69</description>
    <label>Planned Lead Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>