force-app/main/default/objects/SPEN_Job__c/fields/SPEN_PlanningMilestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlanningMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planning Milestone</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Milestone with the related Job.</errorMessage>
        <filterItems>
            <field>SPEN_Job_Milestone__c.SPEN_Job__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_Job_Milestone__c</referenceTo>
    <relationshipLabel>Planning Milestone</relationshipLabel>
    <relationshipName>JobMilestone</relationshipName>
    <type>Lookup</type>
</CustomField>