force-app/main/default/objects/SPEN_Job__c/fields/SPEN_PlanningRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlanningRequired__c</fullName>
    <description>Story: ESC-114 to record if planning is required or not.</description>
    <label>Planning Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>