force-app/main/default/objects/SPEN_Job__c/fields/SPEN_PMONumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PMONumber__c</fullName>
    <label>PMO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>