force-app/main/default/objects/SPEN_Job__c/fields/SPEN_POforTitleReport__c.field-meta.xml
<CustomField>
    <fullName>SPEN_POforTitleReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO for Title Report</label>
    <type>Checkbox</type>
</CustomField>