force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Project_CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Project_CustomerReference__c</fullName>
    <label>Project/Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>