force-app/main/default/objects/SPEN_Job__c/fields/SPEN_ProjectManager__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ProjectManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectManagerJobs</relationshipName>
    <type>Lookup</type>
</CustomField>