force-app/main/default/objects/SPEN_Job__c/fields/SPEN_RedesignCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RedesignCompletedDate__c</fullName>
    <label>Redesign Completed Date</label>
    <type>Date</type>
</CustomField>