force-app/main/default/objects/SPEN_Job__c/fields/SPEN_RedesignRequestedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RedesignRequestedDate__c</fullName>
    <label>Redesign Requested Date</label>
    <type>Date</type>
</CustomField>