force-app/main/default/objects/SPEN_Job__c/fields/SPEN_RedesignRequestLeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RedesignRequestLeadTime__c</fullName>
    <description>Created as part of ESC-458.</description>
    <label>Redesign Request Lead Time</label>
    <summarizedField>SPEN_DesignChange__c.SPEN_LeadTimeDelay__c</summarizedField>
    <summaryFilterItems>
        <field>SPEN_DesignChange__c.SPEN_RedesignOrigin__c</field>
        <operation>equals</operation>
        <value>Job</value>
    </summaryFilterItems>
    <summaryForeignKey>SPEN_DesignChange__c.SPEN_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>