force-app/main/default/objects/SPEN_Job__c/fields/SPEN_RejectionComment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RejectionComment__c</fullName>
    <description>Created as part of ESC-39.</description>
    <label>Rejection Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>