force-app/main/default/objects/SPEN_Job__c/fields/SPEN_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RejectionReason__c</fullName>
    <description>Created as part of ESC-39.</description>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Detail</fullName>
            </value>
            <value>
                <fullName>Missing Data</fullName>
            </value>
            <value>
                <fullName>Incorrect Selection</fullName>
            </value>
            <value>
                <fullName>Other and comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>