force-app/main/default/objects/SPEN_Job__c/fields/SPEN_RequestorNotes__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RequestorNotes__c</fullName>
    <description>Created as part of ESC-845</description>
    <label>Requestor Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>